nav z-index fix

--- a/scss/components/nav.scss
+++ b/scss/components/nav.scss
@@ -13,6 +13,8 @@ nav {
     width: 100%;
     height: 4em;
 
+    z-index: 99 ;
+
     .title {
         font-family: $Mori-SemiBold;
         font-weight: bolder;
